--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseurl: /
 languageCode: en-US
-title: On the art of digiscoping
+title: A space for reflection.
 theme: hugo-lithium
 ignoreFiles:
   - \.Rmd$
@@ -19,8 +19,8 @@ menu:
 params:
   MathJaxCDN: //cdnjs.cloudflare.com/ajax/libs
   MathJaxVersion: 2.7.5
-  description: A website built through Hugo and blogdown.
-  favicon: favicon.ico
+  #description: A website built through Hugo and blogdown.
+  #favicon: favicon.ico
   highlightjsCDN: //cdnjs.cloudflare.com/ajax/libs
   highlightjsLang:
     - r
